# animus-subject-markdown

./: .gitignore  Cargo.toml  README.md  plugin.toml
.github/workflows/: ci.yml  release.yml
src/: backend.rs  config.rs  id_gen.rs  lib.rs  main.rs  parser.rs  watcher.rs  writer.rs
tests/: contract.rs  render_probe.rs
tests/fixtures/: task-001.md  task-with-body.md
