[package]
name = "animus-subject-markdown"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "Markdown-file subject backend for Animus — git-friendly, one .md per task"
repository = "https://github.com/launchapp-dev/animus-subject-markdown"
homepage = "https://github.com/launchapp-dev/animus-cli"
readme = "README.md"
default-run = "animus-subject-markdown"

[lib]
name = "animus_subject_markdown"
path = "src/lib.rs"

[[bin]]
name = "animus-subject-markdown"
path = "src/main.rs"

[dependencies]
animus-plugin-protocol  = { git = "https://github.com/launchapp-dev/animus-protocol", tag = "v0.1.2" }
animus-subject-protocol = { git = "https://github.com/launchapp-dev/animus-protocol", tag = "v0.1.2" }
animus-plugin-runtime   = { git = "https://github.com/launchapp-dev/animus-protocol", tag = "v0.1.2" }

tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "sync", "time"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
notify = "6"
async-trait = "0.1"
futures = "0.3"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
